[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mTag_MeGilles"
version = "0.0.1"
authors = [
  { name="Gilles Mertens", email="gilles@gillesmertens.com" },
]
description = "Python implementation of the mTag API (Grenoble)"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [ 
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MeGilles/mTagPython"
Issues = "https://github.com/MeGilles/mTagPython/issues"